feat: odds by pinnacle

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,12 +5,6 @@ body {
   padding: 20px;
 }
 
-.v-card {
-  background-color: inherit !important;
-  color: inherit !important;
-  font-size: inherit !important;
-  box-shadow: inherit !important;
-}
 
 .v-expansion-panel {
   background-color: rgba(255, 255, 255, 0.1) !important;
@@ -55,4 +49,25 @@ a {
 
 .v-data-table {
   background: inherit !important;
+}
+
+/* hide the "scrim", it's pointless */
+.v-overlay--active .v-overlay__scrim {
+  display: none;
+}
+
+/* style the overlay container as required */
+.v-overlay--active {
+  backdrop-filter: blur(2px);
+  background: rgb(0 0 0 / 0.8);
+}
+
+/* if you have an auto dark theme
+ for prefers-color-scheme: dark
+ I find the 0.8 too dark
+*/
+@media (prefers-color-scheme: dark) {
+  .v-overlay--active {
+    background: rgb(0 0 0 / 0.4);
+  }
 }
